Emoji alignment, and size fix when dropped [PT177888559] (#325)

--- a/src/components/LiveStream/StreamInteractiveArea/StreamControls/EmojiBasket/style.scss
+++ b/src/components/LiveStream/StreamInteractiveArea/StreamControls/EmojiBasket/style.scss
@@ -69,7 +69,6 @@
         transition: transform .1s ease;
         max-width: 100%;
         max-height: 100%;
-        margin: auto;
         display: block;
 
         &:hover {
@@ -117,4 +116,9 @@
       height: 100%;
     }
   }
+}
+
+.basketItem {
+  display: flex;
+  align-items: center;
 }
