--- a/src/components/LiveStream/StreamInteractiveArea/StreamInteractions/Interaction/style.scss
+++ b/src/components/LiveStream/StreamInteractiveArea/StreamInteractions/Interaction/style.scss
@@ -30,7 +30,6 @@
   position: absolute;
   transform: translate(-50%, -50%);
   width: 40px;
-  height: 40px;
 }
 
 .cameraPin {
